# pip-chill

./: .flake8  .gitignore  .pre-commit-config.yaml  .prettierrc  .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  Makefile  README.rst  claude.md  dev-setup.sh  dev-test.sh  pip-chill.py  pyproject.toml  req.txt  requirements_dev.txt  setup.cfg  setup.py  tox.ini
.circleci/: config.yml
.github/: ISSUE_TEMPLATE.md  dependabot.yml
.github/workflows/: codecov.yml  dependabot-auto-merge.yml  pylint.yml  python-package.yml  stale.yml
docs/: Makefile  api.rst  conf.py  index.rst  installation.rst  make.bat  modules.rst  pip_chill.rst  usage.rst
hooks/: pre-commit
pip_chill/: __init__.py  __main__.py  cli.py  pip_chill.py  utils.py
tests/: test_cli.py  test_pip_chill.py
