[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pip-chill"
version = "1.0.5"
description = "Like `pip freeze` but lists only the packages that are not dependencies of installed packages."
readme = {file = "README.rst", content-type = "text/x-rst"}
requires-python = ">=3.10"
license = "GPL-3.0-or-later"
license-files = ["LICENSE", "AUTHORS.rst"]
keywords = ["pip-chill"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Environment :: Console",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/rbanffy/pip-chill"

[project.scripts]
pip-chill = "pip_chill.cli:main"

[tool.setuptools]
packages = ["pip_chill"]
package-dir = {pip_chill = "pip_chill"}
include-package-data = true
zip-safe = false

[tool.setuptools.package-data]
"*" = ["*.rst", "*.txt", "*.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.pylint.main]
disable = ["C0103", "C0115", "C0116", "W0622"]

[tool.ruff]
line-length = 79
